dfir_rs/tests/compile-fail-stable/surface_syntax_paren.rs
../compile-fail/surface_syntax_paren.rs